--- a/src/Notebooks/Asym_SPNI_PO.ipynb
+++ b/src/Notebooks/Asym_SPNI_PO.ipynb
@@ -343,9 +343,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Add random seeds everywhere (also pytorch) to ensure reproducibility\n",
-    "# TODO: Replace single-instance example above with a statistical argument"
+    "# TODO: Add random seeds everywhere (also pytorch) to ensure reproducibility (Use Codex for this?)\n",
+    "# TODO: Replace single-instance example above with a statistical argument\n",
+    "# Idea: What about training a PO framework first and then tuning the parameters with SPO? \n",
+    "#       -> Gives more accurate & easier to interpret results and can finetune for SPO afterwards.\n",
+    "#       -> What about computing both gradients and changing their weights for learning gradually over time, \n",
+    "#               e.g., 100% PO first, 50/50 in the middle, and 100% SPO at the end?\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
