--- a/src/Notebooks/Asym_SPNI_PO.ipynb
+++ b/src/Notebooks/Asym_SPNI_PO.ipynb
@@ -30,8 +30,11 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import torch\n",
+    "import random\n",
     "import torch.nn as nn\n",
     "import pyepo\n",
+    "\n",
+    "from src.data.config import HP\n",
     "from sklearn.model_selection import train_test_split\n",
     "from src.models.LinearRegression import LinearRegression\n",
     "\n",
@@ -41,7 +44,9 @@
     "from src.solvers.BendersDecomposition import BendersDecomposition\n",
     "from data.DataGenerator import DataGenerator\n",
     "from models.SPOTrainer import SPOTrainer\n",
-    "from models.POTrainer import POTrainer"
+    "from models.POTrainer import POTrainer\n",
+    "\n",
+    "from scripts.compare_po_spo import compare_po_spo"
    ]
   },
   {
@@ -66,12 +71,10 @@
     "num_data_samples = 100\n",
     "test_size = 0.2\n",
     "data_loader_batch_size = 32\n",
-    "epochs = 10\n",
+    "epochs = 5\n",
     "\n",
     "# Set the random seed for reproducibility\n",
     "np.random.seed(random_seed)\n",
-    "\n",
-    "import random, torch\n",
     "random.seed(random_seed)\n",
     "torch.manual_seed(random_seed)\n",
     "if torch.cuda.is_available():\n",
@@ -145,14 +148,14 @@
    "outputs": [],
    "source": [
     "# Define your network dimensions\n",
-    "input_size  =  num_features   # e.g. number of features in your cost\u2010vector\n",
+    "input_size  =  num_features   # e.g. number of features in your cost‐vector\n",
     "hidden_size =  64   # number of neurons in the hidden layer\n",
     "output_size =  graph.num_cost   # e.g. # of target outputs, or number of classes\n",
     "\n",
     "# Build the model with nn.Sequential\n",
     "po_model = nn.Sequential(\n",
     "    nn.Linear(input_size, hidden_size),  # first affine layer\n",
-    "    nn.ReLU(),                           # non\u2010linearity\n",
+    "    nn.ReLU(),                           # non‐linearity\n",
     "    nn.Linear(hidden_size, output_size),  # second affine layer\n",
     "    nn.Sigmoid()                         # output activation function\n",
     ")\n",
@@ -206,14 +209,14 @@
    "outputs": [],
    "source": [
     "# Define your network dimensions\n",
-    "input_size  =  num_features   # e.g. number of features in your cost\u2010vector\n",
+    "input_size  =  num_features   # e.g. number of features in your cost‐vector\n",
     "hidden_size =  64   # number of neurons in the hidden layer\n",
     "output_size =  graph.num_cost   # e.g. # of target outputs, or number of classes\n",
     "\n",
     "# Build the model with nn.Sequential\n",
     "spo_model = nn.Sequential(\n",
     "    nn.Linear(input_size, hidden_size),  # first affine layer\n",
-    "    nn.ReLU(),                           # non\u2010linearity\n",
+    "    nn.ReLU(),                           # non‐linearity\n",
     "    nn.Linear(hidden_size, output_size),  # second affine layer\n",
     "    nn.Sigmoid()                         # output activation function\n",
     ")\n",
@@ -268,6 +271,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set the configuration parameters\n",
+    "test_data_samples = 10 # number of training data\n",
+    "deg=3\n",
+    "noise_width=0.05\n",
+    "seed=31"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the configuration class\n",
+    "cfg = HP()\n",
+    "\n",
+    "# # Change configuration parameters (optional)\n",
+    "# cfg.set(\"test_data_samples\", test_data_samples)\n",
+    "# cfg.set(\"deg\", deg)\n",
+    "# cfg.set(\"noise_width\", noise_width)\n",
+    "# cfg.set(\"seed\", seed)\n",
+    "# cfg.set(\"num_features\", num_features)\n",
+    "# cfg.set(\"grid_size\", (graph.m, graph.n))\n",
+    "# cfg.set(\"random_seed\", random_seed)\n",
+    "\n",
+    "# cfg.set(\"num_data_samples\", num_data_samples)\n",
+    "# cfg.set(\"test_size\", test_size)\n",
+    "# cfg.set(\"data_loader_batch_size\", data_loader_batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "true_objs, po_objs, spo_objs = compare_po_spo(cfg, opt_model, po_model, spo_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "po_val = [(po - true) / true for po, true in zip(po_objs, true_objs)]\n",
+    "spo_val = [(spo - true) / true for spo, true in zip(spo_objs, true_objs)]\n",
+    "\n",
+    "plt.scatter(np.ones_like(po_objs), po_val)\n",
+    "plt.scatter(np.ones_like(spo_objs) + 1, spo_val)\n",
+    "# plt.legend(['PO', 'SPO'], location='north')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sjkhg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Set parameters for data generation\n",
     "test_data_samples = 10 # number of training data\n",
     "cost_index = 1 # index of the cost vector to use\n",
@@ -296,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,13 +439,13 @@
     "# Idea: What about training a PO framework first and then tuning the parameters with SPO? \n",
     "#       -> Gives more accurate & easier to interpret results and can finetune for SPO afterwards.\n",
     "#       -> What about computing both gradients and changing their weights for learning gradually over time, \n",
-    "#               e.g., 100% PO first, 50/50 in the middle, and 100% SPO at the end?\n"
+    "#               e.g., 100% PO first, 50/50 in the middle, and 100% SPO at the end?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": []
