--- a/src/Notebooks/Asym_SPNI_PO.ipynb
+++ b/src/Notebooks/Asym_SPNI_PO.ipynb
@@ -33,6 +33,7 @@
     "import random\n",
     "import torch.nn as nn\n",
     "import pyepo\n",
+    "from tabulate import tabulate\n",
     "\n",
     "from src.data.config import HP\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -71,7 +72,7 @@
     "num_data_samples = 100\n",
     "test_size = 0.2\n",
     "data_loader_batch_size = 32\n",
-    "epochs = 5\n",
+    "epochs = 10\n",
     "\n",
     "# Set the random seed for reproducibility\n",
     "np.random.seed(random_seed)\n",
@@ -272,7 +273,7 @@
    "outputs": [],
    "source": [
     "# Set the configuration parameters\n",
-    "test_data_samples = 10 # number of training data\n",
+    "test_data_samples = 1000 # number of training data\n",
     "deg=3\n",
     "noise_width=0.05\n",
     "seed=31"
@@ -288,14 +289,14 @@
     "# Initialize the configuration class\n",
     "cfg = HP()\n",
     "\n",
-    "# # Change configuration parameters (optional)\n",
-    "# cfg.set(\"test_data_samples\", test_data_samples)\n",
-    "# cfg.set(\"deg\", deg)\n",
-    "# cfg.set(\"noise_width\", noise_width)\n",
-    "# cfg.set(\"seed\", seed)\n",
-    "# cfg.set(\"num_features\", num_features)\n",
-    "# cfg.set(\"grid_size\", (graph.m, graph.n))\n",
-    "# cfg.set(\"random_seed\", random_seed)\n",
+    "# Change configuration parameters (optional)\n",
+    "cfg.set(\"test_data_samples\", test_data_samples)\n",
+    "cfg.set(\"deg\", deg)\n",
+    "cfg.set(\"noise_width\", noise_width)\n",
+    "cfg.set(\"seed\", seed)\n",
+    "cfg.set(\"num_features\", num_features)\n",
+    "cfg.set(\"grid_size\", (graph.m, graph.n))\n",
+    "cfg.set(\"random_seed\", random_seed)\n",
     "\n",
     "# cfg.set(\"num_data_samples\", num_data_samples)\n",
     "# cfg.set(\"test_size\", test_size)\n",
@@ -322,9 +323,32 @@
     "po_val = [(po - true) / true for po, true in zip(po_objs, true_objs)]\n",
     "spo_val = [(spo - true) / true for spo, true in zip(spo_objs, true_objs)]\n",
     "\n",
-    "plt.scatter(np.ones_like(po_objs), po_val)\n",
-    "plt.scatter(np.ones_like(spo_objs) + 1, spo_val)\n",
-    "# plt.legend(['PO', 'SPO'], location='north')"
+    "# plt.scatter(np.ones_like(po_objs), po_val)\n",
+    "# plt.scatter(np.ones_like(spo_objs) + 1, spo_val)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(6,4))\n",
+    "\n",
+    "# Two groups: PO and SPO\n",
+    "_ = ax.boxplot([po_val, spo_val], tick_labels=['PO', 'SPO'],\n",
+    "           showmeans=True, meanline=True)   # optional styling\n",
+    "# plt.legend(['PO', 'SPO'], location='north')\n",
+    "\n",
+    "po_mean  = np.mean(po_val)\n",
+    "spo_mean = np.mean(spo_val)\n",
+    "\n",
+    "# std devs\n",
+    "po_std_pop  = np.std(po_val, ddof=0)   # population σ\n",
+    "po_std_samp = np.std(po_val, ddof=1)   # sample s (n-1)\n",
+    "spo_std_pop  = np.std(spo_val, ddof=0)\n",
+    "spo_std_samp = np.std(spo_val, ddof=1)\n",
+    "mean_improvement = (po_mean - spo_mean) * 100 / po_mean\n",
+    "std_improvement = (po_std_samp - spo_std_samp) * 100 / po_std_samp\n",
+    "\n",
+    "rows = [\n",
+    "    [\"Mean\",         f\"{po_mean*100:.2f}%\",  f\"{spo_mean*100:.2f}%\", f\"{mean_improvement:.2f}%\"],\n",
+    "    [\"Std (sample)\", f\"{po_std_samp*100:.2f}%\", f\"{spo_std_samp*100:.2f}%\", f\"{std_improvement:.2f}%\"],\n",
+    "]\n",
+    "print(tabulate(rows, headers=[\"Metric\", \"PO (%)\", \"SPO (%)\", \"SPO improvement (%)\"], tablefmt=\"github\"))"
    ]
   },
   {
