--- a/src/Notebooks/Asym_SPNI_PO.ipynb
+++ b/src/Notebooks/Asym_SPNI_PO.ipynb
@@ -73,6 +73,7 @@
     "test_size = 0.2\n",
     "data_loader_batch_size = 32\n",
     "epochs = 10\n",
+    "lr = .03\n",
     "\n",
     "# Set the random seed for reproducibility\n",
     "np.random.seed(random_seed)\n",
@@ -113,13 +114,18 @@
     "# costs, features = data_gen.generate_data(num_samples=num_data_samples)\n",
     "\n",
     "features, costs = pyepo.data.shortestpath.genData(\n",
-    "    1000, \n",
+    "    num_data_samples, \n",
     "    num_features, \n",
     "    (graph.m, graph.n), \n",
     "    deg=3, \n",
     "    noise_width=0.05, \n",
     "    seed=31\n",
     ")\n",
+    "\n",
+    "normalization_constant = 6\n",
+    "\n",
+    "# Normalize the costs\n",
+    "costs = costs / normalization_constant\n",
     "\n",
     "# Split the data into training and testing sets\n",
     "X_train, X_test, c_train, c_test = train_test_split(features, costs, test_size=test_size, random_state=random_seed)\n",
@@ -163,7 +169,7 @@
     "\n",
     "# Define the loss function and optimizer\n",
     "po_criterion = nn.MSELoss()\n",
-    "optimizer = torch.optim.Adam(po_model.parameters(), lr=0.1)"
+    "optimizer = torch.optim.Adam(po_model.parameters(), lr=lr)"
    ]
   },
   {
@@ -226,7 +232,7 @@
     "spop = pyepo.func.SPOPlus(opt_model, processes=1)\n",
     "\n",
     "# Init optimizer\n",
-    "optimizer = torch.optim.Adam(spo_model.parameters(), lr=.1)"
+    "optimizer = torch.optim.Adam(spo_model.parameters(), lr=lr)"
    ]
   },
   {
@@ -310,13 +316,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_objs, po_objs, spo_objs = compare_po_spo(cfg, opt_model, po_model, spo_model)"
+    "from scripts.setup import gen_test_data\n",
+    "test_data = gen_test_data(cfg)\n",
+    "test_data[\"costs\"] = test_data[\"costs\"] / normalization_constant  # Normalize the costs\n",
+    "true_objs, po_objs, spo_objs = compare_po_spo(cfg, opt_model, po_model, spo_model, test_data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eps = 1e-5  # Define a small epsilon for numerical stability\n",
+    "print(f\"Instances where PO is better than SPO: {sum([1 if spo - po > eps else 0 for po, spo in zip(po_objs, spo_objs)]) / len(po_objs)}\")\n",
+    "print(f\"Instances where SPO is better than PO: {sum([1 if po - spo > eps else 0 for po, spo in zip(po_objs, spo_objs)]) / len(po_objs)}\")\n",
+    "print(f\"Sanity check (equal performance):      {sum([1 if abs(po - spo) < eps else 0 for po, spo in zip(po_objs, spo_objs)]) / len(po_objs)}\")\n",
+    "# Interesting result: The percentage of PO better than SPO is almost equal to SPO better than PO."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +377,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1,3,figsize=(18,6))\n",
+    "opt_model.setObj(costs[0])\n",
+    "\n",
+    "path, _ = opt_model.solve()\n",
+    "opt_model.visualize(ax=ax[0], colored_edges=path)\n",
+    "\n",
+    "opt_model.setObj(spo_model(torch.tensor(features[0], dtype=torch.float32)).detach().numpy())\n",
+    "path, _ = opt_model.solve()\n",
+    "opt_model.visualize(ax=ax[1], colored_edges=path)\n",
+    "\n",
+    "opt_model.setObj(po_model(torch.tensor(features[0], dtype=torch.float32)).detach().numpy())\n",
+    "path, _ = opt_model.solve()\n",
+    "opt_model.visualize(ax=ax[2], colored_edges=path)\n",
+    "fig.tight_layout()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -362,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": []
