--- a/src/Notebooks/Asym_SPNI_PO.ipynb
+++ b/src/Notebooks/Asym_SPNI_PO.ipynb
@@ -69,11 +69,30 @@
     "\n",
     "# ML hyperparameters\n",
     "num_features = 5\n",
-    "num_data_samples = 100\n",
+    "num_data_samples = 1000\n",
     "test_size = 0.2\n",
     "data_loader_batch_size = 32\n",
-    "epochs = 10\n",
-    "lr = .03\n",
+    "po_epochs = 10\n",
+    "spo_epochs = 10\n",
+    "po_lr = .01\n",
+    "spo_lr = .001\n",
+    "\n",
+    "# Set the configuration parameters\n",
+    "sim_data_samples = 1000 # number of training data\n",
+    "deg=7\n",
+    "noise_width=0.05\n",
+    "normalization_constant = {3:10, 5:20, 7:70}[deg]\n",
+    "\n",
+    "# Initialize the configuration class\n",
+    "cfg = HP()\n",
+    "\n",
+    "# Change configuration parameters (optional)\n",
+    "cfg.set(\"sim_data_samples\", sim_data_samples)\n",
+    "cfg.set(\"deg\", deg)\n",
+    "cfg.set(\"noise_width\", noise_width)\n",
+    "cfg.set(\"num_features\", num_features)\n",
+    "cfg.set(\"grid_size\", network)\n",
+    "cfg.set(\"random_seed\", random_seed)\n",
     "\n",
     "# Set the random seed for reproducibility\n",
     "np.random.seed(random_seed)\n",
@@ -117,12 +136,10 @@
     "    num_data_samples, \n",
     "    num_features, \n",
     "    (graph.m, graph.n), \n",
-    "    deg=3, \n",
-    "    noise_width=0.05, \n",
-    "    seed=31\n",
+    "    deg=deg, \n",
+    "    noise_width=noise_width, \n",
+    "    seed=random_seed\n",
     ")\n",
-    "\n",
-    "normalization_constant = 6\n",
     "\n",
     "# Normalize the costs\n",
     "costs = costs / normalization_constant\n",
@@ -169,7 +186,7 @@
     "\n",
     "# Define the loss function and optimizer\n",
     "po_criterion = nn.MSELoss()\n",
-    "optimizer = torch.optim.Adam(po_model.parameters(), lr=lr)"
+    "optimizer = torch.optim.Adam(po_model.parameters(), lr=po_lr)"
    ]
   },
   {
@@ -186,7 +203,7 @@
     "    loss_fn=po_criterion\n",
     ")\n",
     "\n",
-    "train_loss_log, train_regret_log, test_loss_log, test_regret_log = po_trainer.fit(optnet_train_loader, optnet_test_loader, epochs=epochs)\n",
+    "train_loss_log, train_regret_log, test_loss_log, test_regret_log = po_trainer.fit(optnet_train_loader, optnet_test_loader, epochs=po_epochs)\n",
     "\n",
     "# Plot the learning curve\n",
     "POTrainer.vis_learning_curve(\n",
@@ -232,7 +249,7 @@
     "spop = pyepo.func.SPOPlus(opt_model, processes=1)\n",
     "\n",
     "# Init optimizer\n",
-    "optimizer = torch.optim.Adam(spo_model.parameters(), lr=lr)"
+    "optimizer = torch.optim.Adam(spo_model.parameters(), lr=spo_lr)"
    ]
   },
   {
@@ -249,7 +266,7 @@
     "                  loss_fn=spop\n",
     "                )\n",
     "\n",
-    "train_loss_log, train_regret_log, test_loss_log, test_regret_log = spo_trainer.fit(optnet_train_loader, optnet_test_loader, epochs=epochs)\n",
+    "train_loss_log, train_regret_log, test_loss_log, test_regret_log = spo_trainer.fit(optnet_train_loader, optnet_test_loader, epochs=spo_epochs)\n",
     "\n",
     "# Plot the learning curve\n",
     "SPOTrainer.vis_learning_curve(\n",
@@ -278,41 +295,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the configuration parameters\n",
-    "test_data_samples = 1000 # number of training data\n",
-    "deg=3\n",
-    "noise_width=0.05\n",
-    "seed=31"
+    "test_data['costs'].max()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize the configuration class\n",
-    "cfg = HP()\n",
-    "\n",
-    "# Change configuration parameters (optional)\n",
-    "cfg.set(\"test_data_samples\", test_data_samples)\n",
-    "cfg.set(\"deg\", deg)\n",
-    "cfg.set(\"noise_width\", noise_width)\n",
-    "cfg.set(\"seed\", seed)\n",
-    "cfg.set(\"num_features\", num_features)\n",
-    "cfg.set(\"grid_size\", (graph.m, graph.n))\n",
-    "cfg.set(\"random_seed\", random_seed)\n",
-    "\n",
-    "# cfg.set(\"num_data_samples\", num_data_samples)\n",
-    "# cfg.set(\"test_size\", test_size)\n",
-    "# cfg.set(\"data_loader_batch_size\", data_loader_batch_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -408,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": []
