--- a/src/Notebooks/Asym_SPNI.ipynb
+++ b/src/Notebooks/Asym_SPNI.ipynb
@@ -71,13 +71,23 @@
     "\n",
     "# ML hyperparameters\n",
     "num_features = 5\n",
-    "num_data_samples = 100\n",
+    "num_data_samples = 1000\n",
     "test_size = 0.2\n",
     "data_loader_batch_size = 32\n",
-    "epochs = 10\n",
-    "sim_data_samples = 10 # number of training data\n",
-    "deg = 3\n",
+    "po_epochs = 35\n",
+    "spo_epochs = 10\n",
+    "po_lr = .01\n",
+    "spo_lr = .001\n",
+    "sim_data_samples = 1000 # number of training data\n",
+    "deg = 7\n",
     "noise_width = 0.05\n",
+    "\n",
+    "# Benders decomposition parameters\n",
+    "benders_max_count = 20\n",
+    "benders_eps = 0.1\n",
+    "\n",
+    "# Set the normalization parameter as a function of the degree\n",
+    "normalization_constant = {3:10, 5:20, 7:70}[deg]\n",
     "\n",
     "# Set the random seed for reproducibility\n",
     "np.random.seed(random_seed)\n",
@@ -103,10 +113,17 @@
     "cfg.set(\"num_data_samples\", num_data_samples)\n",
     "cfg.set(\"test_size\", test_size)\n",
     "cfg.set(\"data_loader_batch_size\", data_loader_batch_size)\n",
-    "cfg.set(\"epochs\", epochs)\n",
+    "cfg.set(\"po_epochs\", po_epochs)\n",
+    "cfg.set(\"spo_epochs\", spo_epochs)\n",
+    "cfg.set(\"po_lr\", po_lr)\n",
+    "cfg.set(\"spo_lr\", spo_lr)\n",
     "cfg.set(\"sim_data_samples\", sim_data_samples)\n",
     "cfg.set(\"deg\", deg)\n",
-    "cfg.set(\"noise_width\", noise_width)\n"
+    "cfg.set(\"noise_width\", noise_width)\n",
+    "cfg.set(\"normalization_constant\", normalization_constant)\n",
+    "\n",
+    "cfg.set(\"benders_max_count\", benders_max_count)\n",
+    "cfg.set(\"benders_eps\", benders_eps)\n"
    ]
   },
   {
@@ -298,7 +315,7 @@
     "    spo_cost = spo_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy()\n",
     "\n",
     "    # Solutions without information asymmetry\n",
-    "    interdictor_I = BendersDecomposition(opt_model, k=B, interdiction_cost=interdiction, max_cnt=20, eps=.1)\n",
+    "    interdictor_I = BendersDecomposition(opt_model, k=B, interdiction_cost=interdiction, max_cnt=cfg.get(\"benders_max_count\"), eps=cfg.get(\"benders_eps\"))\n",
     "    x_true_I, y_true_I, obj_true_I = interdictor_I.solve()\n",
     "\n",
     "    # True shortest path after interdiction\n",
@@ -383,11 +400,11 @@
     "    true_objs.append(obj_true)\n",
     "    est_objs.append(true_graph(y_est))\n",
     "\n",
-    "    # Optional: Print progress\n",
-    "    sys.stdout.write('\\r')\n",
-    "    # the exact output you're looking for:\n",
-    "    sys.stdout.write(\"[%-20s] %d%%\" % ('='*i, 5*i))\n",
-    "    sys.stdout.flush()\n",
+    "    # # Optional: Print progress\n",
+    "    # sys.stdout.write('\\r')\n",
+    "    # # the exact output you're looking for:\n",
+    "    # sys.stdout.write(\"[%-20s] %d%%\" % ('='*i, 5*i))\n",
+    "    # sys.stdout.flush()\n",
     "\n",
     "# Evaluate performance\n",
     "spni_benders = {\n",
