Asym_SPNI.ipynb is fully updated and running now. Added status bars to Interdictor simulations. Ready to add more cases.

--- a/src/Notebooks/Asym_SPNI.ipynb
+++ b/src/Notebooks/Asym_SPNI.ipynb
@@ -78,13 +78,13 @@
     "spo_epochs = 10\n",
     "po_lr = .01\n",
     "spo_lr = .001\n",
-    "sim_data_samples = 1000 # number of training data\n",
+    "sim_data_samples = 100 # number of training data\n",
     "deg = 7\n",
     "noise_width = 0.05\n",
     "\n",
     "# Benders decomposition parameters\n",
     "benders_max_count = 20\n",
-    "benders_eps = 0.1\n",
+    "benders_eps = 1e-3\n",
     "\n",
     "# Set the normalization parameter as a function of the degree\n",
     "normalization_constant = {3:10, 5:20, 7:70}[deg]\n",
@@ -293,13 +293,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get the number of simulation data samples\n",
+    "sim_data_samples = cfg.get(\"sim_data_samples\")\n",
+    "\n",
     "# Prepare lists to store results\n",
     "true_objs = []\n",
     "po_objs = []\n",
     "spo_objs = []\n",
     "\n",
+    "# Print that the simulation is starting\n",
+    "print(f\"Running simulation with {sim_data_samples} samples...\")\n",
+    "\n",
     "# Iterate through each data sample\n",
-    "for i in range(cfg.get(\"sim_data_samples\")):\n",
+    "for i in range(sim_data_samples):\n",
     "    # Store values for the current sample\n",
     "    feature = test_data[\"features\"][i]\n",
     "    cost = test_data[\"costs\"][i]\n",
@@ -316,7 +322,7 @@
     "\n",
     "    # Solutions without information asymmetry\n",
     "    interdictor_I = BendersDecomposition(opt_model, k=B, interdiction_cost=interdiction, max_cnt=cfg.get(\"benders_max_count\"), eps=cfg.get(\"benders_eps\"))\n",
-    "    x_true_I, y_true_I, obj_true_I = interdictor_I.solve()\n",
+    "    x_true_I, y_true_I, obj_true_I = interdictor_I.solve(versatile=False)\n",
     "\n",
     "    # True shortest path after interdiction\n",
     "    true_shortest_path = shortestPathGrb(true_graph)\n",
@@ -337,6 +343,20 @@
     "    true_objs.append(obj_true_I)\n",
     "    po_objs.append(true_graph(y_est_I))\n",
     "    spo_objs.append(true_graph(y_est_spo_I))\n",
+    "\n",
+    "    step = max(1, sim_data_samples // 20)  # ~every 5% (safe for small N)\n",
+    "    if (i % step == 0) or (i == sim_data_samples - 1):\n",
+    "        if i == sim_data_samples - 1:\n",
+    "            done, pct = 20, 100                      # final tick\n",
+    "        else:\n",
+    "            done = (i * 20) // sim_data_samples      # 0..20 “=”\n",
+    "            pct  = done * 5                          # 0,5,10,...,95\n",
+    "\n",
+    "        sys.stdout.write('\\r[%-20s] %3d%%' % ('=' * done, pct))\n",
+    "        sys.stdout.flush()\n",
+    "        if i == sim_data_samples - 1:\n",
+    "            sys.stdout.write('\\n')\n",
+    "\n",
     "\n",
     "# Evaluate performance\n",
     "spni_benders = {\n",
@@ -361,7 +381,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: Run for each model (e.g., PO, SPO)\n",
     "pred_model = po_model\n",
+    "\n",
+    "# Get the number of simulation data samples\n",
+    "sim_data_samples = cfg.get(\"sim_data_samples\")\n",
+    "\n",
+    "# Print that the simulation is starting\n",
+    "print(f\"Running simulation with {sim_data_samples} samples...\")\n",
     "\n",
     "# Prepare lists to store results\n",
     "true_objs = []\n",
@@ -400,11 +427,18 @@
     "    true_objs.append(obj_true)\n",
     "    est_objs.append(true_graph(y_est))\n",
     "\n",
-    "    # # Optional: Print progress\n",
-    "    # sys.stdout.write('\\r')\n",
-    "    # # the exact output you're looking for:\n",
-    "    # sys.stdout.write(\"[%-20s] %d%%\" % ('='*i, 5*i))\n",
-    "    # sys.stdout.flush()\n",
+    "    step = max(1, sim_data_samples // 20)  # ~every 5% (safe for small N)\n",
+    "    if (i % step == 0) or (i == sim_data_samples - 1):\n",
+    "        if i == sim_data_samples - 1:\n",
+    "            done, pct = 20, 100                      # final tick\n",
+    "        else:\n",
+    "            done = (i * 20) // sim_data_samples      # 0..20 “=”\n",
+    "            pct  = done * 5                          # 0,5,10,...,95\n",
+    "\n",
+    "        sys.stdout.write('\\r[%-20s] %3d%%' % ('=' * done, pct))\n",
+    "        sys.stdout.flush()\n",
+    "        if i == sim_data_samples - 1:\n",
+    "            sys.stdout.write('\\n')\n",
     "\n",
     "# Evaluate performance\n",
     "spni_benders = {\n",
