Implemented single data sample comparison of interdictors & predictors.

--- a/src/Notebooks/Asym_SPNI.ipynb
+++ b/src/Notebooks/Asym_SPNI.ipynb
@@ -395,7 +395,7 @@
     "est_objs = []\n",
     "\n",
     "# Iterate through each data sample\n",
-    "for i in range(cfg.get(\"sim_data_samples\")):\n",
+    "for i in range(sim_data_samples):\n",
     "    # Store values for the current sample\n",
     "    feature = test_data[\"features\"][i]\n",
     "    cost = test_data[\"costs\"][i]\n",
@@ -410,7 +410,7 @@
     "    est_cost = pred_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy()\n",
     "\n",
     "    # Solutions with information asymmetry\n",
-    "    asym_interdictor = AsymmetricSPNI(true_graph, budget=B, true_costs=cost, true_delays=interdiction, est_costs=est_cost, est_delays=interdiction, lsd=1)\n",
+    "    asym_interdictor = AsymmetricSPNI(true_graph, budget=B, true_costs=cost, true_delays=interdiction, est_costs=est_cost, est_delays=interdiction, lsd=cfg.get(\"lsd\"))\n",
     "    x_true, obj_true = asym_interdictor.solve()\n",
     "\n",
     "    # True shortest path after interdiction\n",
@@ -441,7 +441,7 @@
     "            sys.stdout.write('\\n')\n",
     "\n",
     "# Evaluate performance\n",
-    "spni_benders = {\n",
+    "spni_knowledgeable = {\n",
     "    \"true_objective\": true_objs,\n",
     "    \"estimated_objective\": est_objs,\n",
     "}"
@@ -451,6 +451,223 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalization_constant = cfg.get(\"normalization_constant\")\n",
+    "print(f\"Bender's mean: {np.array(spni_benders['true_objective']).mean()*normalization_constant:.2f}\")\n",
+    "print(f\"SPNI mean: {np.array(spni_knowledgeable['true_objective']).mean()*normalization_constant:.2f}\")\n",
+    "print(f\"Bender's std: {np.array(spni_benders['true_objective']).std()*normalization_constant:.2f}\")\n",
+    "print(f\"SPNI std: {np.array(spni_knowledgeable['true_objective']).std()*normalization_constant:.2f}\")\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(6,4))\n",
+    "\n",
+    "_ = ax.boxplot([spni_benders[\"true_objective\"], spni_knowledgeable[\"true_objective\"]],\n",
+    "           tick_labels=['Benders', 'SPNI'],\n",
+    "           showmeans=True, meanline=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = 1\n",
+    "\n",
+    "# Create figure\n",
+    "fig, ax = plt.subplots(1,3,figsize=(18,6))\n",
+    "\n",
+    "# Store constants that will be reused\n",
+    "normalization_constant = cfg.get(\"normalization_constant\")\n",
+    "cost = test_data['costs'][idx] * normalization_constant\n",
+    "features = test_data['features'][idx]\n",
+    "interdiction = interdictions['costs'][idx] * normalization_constant\n",
+    "\n",
+    "# Create the true graph and models\n",
+    "true_graph = ShortestPathGrid(m, n, cost=cost)\n",
+    "true_opt_model = shortestPathGrb(true_graph)\n",
+    "\n",
+    "# Create the PO and SPO graph & models\n",
+    "po_cost = po_model(torch.tensor(features, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
+    "spo_cost = spo_model(torch.tensor(features, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
+    "po_opt_model = shortestPathGrb(true_graph)\n",
+    "spo_opt_model = shortestPathGrb(true_graph)\n",
+    "po_opt_model.setObj(po_cost)\n",
+    "spo_opt_model.setObj(spo_cost)\n",
+    "\n",
+    "# Solve & visualize the shortest paths for ...\n",
+    "# ... the true model\n",
+    "path, obj = true_opt_model.solve()\n",
+    "true_opt_model.visualize(ax=ax[0], colored_edges=path, title=\"Oracle\")\n",
+    "true_pred_no_intd = true_graph(path)\n",
+    "print(f\"True cost: {true_pred_no_intd:.2f}\")\n",
+    "\n",
+    "# ... the PO model\n",
+    "path, obj = po_opt_model.solve()\n",
+    "po_opt_model.visualize(ax=ax[1], colored_edges=path, title=\"PO\")\n",
+    "po_pred_no_intd = true_graph(path)\n",
+    "print(f\"PO cost: {po_pred_no_intd:.2f}\")\n",
+    "\n",
+    "# ... the SPO model\n",
+    "path, obj = spo_opt_model.solve()\n",
+    "spo_opt_model.visualize(ax=ax[2], colored_edges=path, title=\"SPO\")\n",
+    "spo_pred_no_intd = true_graph(path)\n",
+    "print(f\"SPO cost: {spo_pred_no_intd:.2f}\")\n",
+    "\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solutions wit information symmetry\n",
+    "interdictor_I = BendersDecomposition(true_opt_model, k=B, interdiction_cost=interdiction, max_cnt=cfg.get(\"benders_max_count\"), eps=cfg.get(\"benders_eps\"))\n",
+    "x_sym, y_sym, obj_sym = interdictor_I.solve()\n",
+    "\n",
+    "# Solutions with information asymmetry for Oracle (Should be identical to symmetric solution)\n",
+    "asym_true_interdictor = AsymmetricSPNI(true_graph, budget=B, true_costs=cost, true_delays=interdiction, est_costs=cost, est_delays=interdiction, lsd=1e-5)\n",
+    "x_asym_true, obj_asym_true = asym_true_interdictor.solve()\n",
+    "\n",
+    "# Solutions with information asymmetry for SPO\n",
+    "asym_spo_interdictor = AsymmetricSPNI(true_graph, budget=B, true_costs=cost, true_delays=interdiction, est_costs=spo_cost, est_delays=interdiction, lsd=1e-5)\n",
+    "x_asym_spo, obj_asym_spo = asym_spo_interdictor.solve()\n",
+    "\n",
+    "# Solutions with information asymmetry for PO\n",
+    "asym_po_interdictor = AsymmetricSPNI(true_graph, budget=B, true_costs=cost, true_delays=interdiction, est_costs=po_cost, est_delays=interdiction, lsd=1e-5)\n",
+    "x_asym_po, obj_asym_po = asym_po_interdictor.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create figure\n",
+    "fig, ax2 = plt.subplots(1,3,figsize=(18,6))\n",
+    "\n",
+    "# Solve & visualize the shortest paths for ...\n",
+    "# ... the oracle (same results for sym/asym interdiction)\n",
+    "true_opt_model.setObj(cost + x_sym * interdiction)\n",
+    "path, obj = true_opt_model.solve()\n",
+    "true_opt_model.visualize(ax=ax2[0], colored_edges=path, title=\"Oracle\")\n",
+    "true_pred_sym_intd = true_graph(path, interdictions=x_sym * interdiction)\n",
+    "print(f\"Oracle cost: {true_pred_sym_intd:.2f}\")\n",
+    "\n",
+    "# ... the PO model & sym interdiction\n",
+    "po_opt_model.setObj(po_cost + x_sym * interdiction)\n",
+    "path, obj = po_opt_model.solve()\n",
+    "po_opt_model.visualize(ax=ax2[1], colored_edges=path, title=\"PO\")\n",
+    "po_pred_sym_intd = true_graph(path, interdictions=x_sym * interdiction)\n",
+    "print(f\"PO cost: {po_pred_sym_intd:.2f}\")\n",
+    "\n",
+    "# ... the SPO model & sym interdiction\n",
+    "spo_opt_model.setObj(spo_cost + x_sym * interdiction)\n",
+    "path, obj = spo_opt_model.solve()\n",
+    "spo_opt_model.visualize(ax=ax2[2], colored_edges=path, title=\"SPO\")\n",
+    "spo_pred_sym_intd = true_graph(path, interdictions=x_sym * interdiction)\n",
+    "print(f\"SPO cost: {spo_pred_sym_intd:.2f}\")\n",
+    "\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create figure\n",
+    "fig, ax3 = plt.subplots(1,3,figsize=(18,6))\n",
+    "\n",
+    "# Solve & visualize the shortest paths for ...\n",
+    "# ... the oracle & asym interdiction\n",
+    "true_opt_model.setObj(cost + x_asym_true * interdiction)\n",
+    "path, obj = true_opt_model.solve()\n",
+    "true_opt_model.visualize(ax=ax3[0], colored_edges=path, dashed_edges=x_asym_true, title=\"Oracle\")\n",
+    "true_pred_asym_intd = true_graph(path, interdictions=x_asym_true * interdiction)\n",
+    "print(f\"Oracle cost: {true_pred_asym_intd:.2f}\")\n",
+    "\n",
+    "# ... the PO model & asym interdiction\n",
+    "po_opt_model.setObj(po_cost + x_asym_po * interdiction)\n",
+    "path, obj = po_opt_model.solve()\n",
+    "po_opt_model.visualize(ax=ax3[1], colored_edges=path, title=\"PO\")\n",
+    "po_pred_asym_intd = true_graph(path, interdictions=x_asym_po * interdiction)\n",
+    "print(f\"PO cost: {po_pred_asym_intd:.2f}\")\n",
+    "\n",
+    "# ... the SPO model & asym interdiction\n",
+    "spo_opt_model.setObj(spo_cost + x_asym_spo * interdiction)\n",
+    "path, obj = spo_opt_model.solve()\n",
+    "spo_opt_model.visualize(ax=ax3[2], colored_edges=path, title=\"SPO\")\n",
+    "spo_pred_asym_intd = true_graph(path, interdictions=x_asym_spo * interdiction)\n",
+    "print(f\"SPO cost: {spo_pred_asym_intd:.2f}\")\n",
+    "\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Precentage improvements, read as: \n",
+    "# <prediction type>_<original interdiction>_<changed interdiction> \n",
+    "# -> percentage is improvement from the original interdiction to the changed interdiction\n",
+    "po_no_sym = (po_pred_sym_intd-po_pred_no_intd)/po_pred_no_intd\n",
+    "po_no_asym = (po_pred_asym_intd-po_pred_no_intd)/po_pred_no_intd\n",
+    "spo_no_sym = (spo_pred_sym_intd-spo_pred_no_intd)/spo_pred_no_intd\n",
+    "spo_no_asym = (spo_pred_asym_intd-spo_pred_no_intd)/spo_pred_no_intd\n",
+    "\n",
+    "# Percentage improvements, read as:\n",
+    "# <original prediction type>_<changed prediction type>_<interdiction type>\n",
+    "# -> percentage is improvement from the original prediction type to the changed prediction type\n",
+    "po_spo_no = (spo_pred_no_intd-po_pred_no_intd)/po_pred_no_intd\n",
+    "po_spo_sym = (spo_pred_sym_intd-po_pred_sym_intd)/po_pred_sym_intd\n",
+    "po_spo_asym = (spo_pred_asym_intd-po_pred_asym_intd)/po_pred_asym_intd\n",
+    "\n",
+    "# Print the results in a table format\n",
+    "rows = [\n",
+    "    [\"Oracle\", f\"{true_pred_no_intd:.2f}\", f\"{true_pred_sym_intd:.2f}\", f\"{true_pred_asym_intd:.2f}\"],\n",
+    "    [\"PO\",         f\"{po_pred_no_intd:.2f} \",  f\"{po_pred_sym_intd:.2f} ({po_no_sym*100:.2f}%)\", f\"{po_pred_asym_intd:.2f} ({po_no_asym*100:.2f}%)\"],\n",
+    "    [\"SPO\", f\"{spo_pred_no_intd:.2f} \", f\"{spo_pred_sym_intd:.2f} ({spo_no_sym*100:.2f}%)\", f\"{spo_pred_asym_intd:.2f} ({spo_no_asym*100:.2f}%)\"],\n",
+    "    [\"Improvement\", f\"{po_spo_no*100:.2f}%\", f\"{po_spo_sym*100:.2f}%\", f\"{po_spo_asym*100:.2f}%\"]\n",
+    "]\n",
+    "print(tabulate(rows, headers=[\"Predictor\", \"No Interdictor\", \"Sym. Interdictor\", \"Asym. Interdictor\"], tablefmt=\"github\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Explanation of the table:\n",
+    "# - Interdictors want to maximize the cost, so they try to achieve high percentages\n",
+    "# - Evaders (Predictors) want to minimize the shortest path, so they try to achieve low percentages\n",
+    "\n",
+    "# Observations from above table:\n",
+    "# - We can clearly see that the SPO model outperforms the PO model in all cases\n",
+    "# - However, employing a symetric interdiction strategy decreses the cost for the PO model -> small performance difference between PO and SPO\n",
+    "\n",
+    "# Possibly iteresting takeaways:\n",
+    "# - Can we show that it doesn't matter much if the evader uses PO or SPO if we deploy bender's (kinda obvious bc bender's is the safe variant tho)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": []
