Implementation of first script with interdictor that learns network costs.

--- a/src/Notebooks/Asym_SPNI.ipynb
+++ b/src/Notebooks/Asym_SPNI.ipynb
@@ -77,7 +77,7 @@
     "po_epochs = 35\n",
     "spo_epochs = 10\n",
     "po_lr = .01\n",
-    "spo_lr = .001\n",
+    "spo_lr = .003\n",
     "sim_data_samples = 100 # number of training data\n",
     "deg = 7\n",
     "noise_width = 0.05\n",
@@ -106,7 +106,7 @@
     "cfg.set(\"d_min\", d_min)\n",
     "cfg.set(\"d_max\", d_max)\n",
     "cfg.set(\"Q\", Q)\n",
-    "cfg.set(\"B\", B)\n",
+    "cfg.set(\"budget\", B)\n",
     "cfg.set(\"grid_size\", network)\n",
     "cfg.set(\"random_seed\", random_seed)\n",
     "\n",
@@ -193,6 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cfg.set(\"spo_lr\", 0.001)\n",
     "spo_model = setup_spo_model(\n",
     "    cfg,\n",
     "    graph,\n",
@@ -327,32 +328,33 @@
     "        opt_model = shortestPathGrb(true_graph)\n",
     "\n",
     "        # Update the estimated costs\n",
-    "        est_cost = po_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
+    "        po_cost = po_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
     "        spo_cost = spo_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
     "\n",
     "        # Solutions without information asymmetry\n",
-    "        interdictor_I = BendersDecomposition(opt_model, k=B, interdiction_cost=interdiction, max_cnt=cfg.get(\"benders_max_count\"), eps=cfg.get(\"benders_eps\"))\n",
-    "        x_true_I, y_true, obj_true = interdictor_I.solve(versatile=False)\n",
+    "        interdictor_I = BendersDecomposition(opt_model, \n",
+    "                                             k=cfg.get(\"budget\"), \n",
+    "                                             interdiction_cost=interdiction, \n",
+    "                                             max_cnt=cfg.get(\"benders_max_count\"), \n",
+    "                                             eps=cfg.get(\"benders_eps\"))\n",
+    "        x_intd, _, _ = interdictor_I.solve(versatile=False)\n",
     "\n",
     "        # True shortest path after interdiction\n",
-    "        true_shortest_path = shortestPathGrb(true_graph)\n",
-    "        true_shortest_path.setObj(cost + x_true_I * interdiction)\n",
-    "        y_true, obj_true = true_shortest_path.solve()\n",
+    "        opt_model.setObj(cost + x_intd * interdiction)\n",
+    "        y_true, _ = opt_model.solve()\n",
     "\n",
     "        # PO estimated shortest path after interdiction\n",
-    "        est_shortest_path_po = shortestPathGrb(true_graph)\n",
-    "        est_shortest_path_po.setObj(est_cost + x_true_I * interdiction)\n",
-    "        y_po, obj_po = est_shortest_path_po.solve()\n",
+    "        opt_model.setObj(po_cost + x_intd * interdiction)\n",
+    "        y_po, _ = opt_model.solve()\n",
     "\n",
     "        # SPO estimated shortest path after interdiction\n",
-    "        est_shortest_path_spo = shortestPathGrb(true_graph)\n",
-    "        est_shortest_path_spo.setObj(spo_cost + x_true_I * interdiction)\n",
-    "        y_spo, obj_spo = est_shortest_path_spo.solve()\n",
+    "        opt_model.setObj(spo_cost + x_intd * interdiction)\n",
+    "        y_spo, _ = opt_model.solve()\n",
     "\n",
     "        # Store the results\n",
-    "        true_objs.append(true_graph(y_true, interdictions=x_true_I * interdiction))\n",
-    "        po_objs.append(true_graph(y_po, interdictions=x_true_I * interdiction))\n",
-    "        spo_objs.append(true_graph(y_spo, interdictions=x_true_I * interdiction))\n",
+    "        true_objs.append(true_graph(y_true, interdictions=x_intd * interdiction))\n",
+    "        po_objs.append(true_graph(y_po, interdictions=x_intd * interdiction))\n",
+    "        spo_objs.append(true_graph(y_spo, interdictions=x_intd * interdiction))\n",
     "\n",
     "        step = max(1, sim_data_samples // 20)  # ~every 5% (safe for small N)\n",
     "        if (i % step == 0) or (i == sim_data_samples - 1):\n",
@@ -428,30 +430,39 @@
     "        interdiction = interdictions[\"costs\"][i] * normalization_constant\n",
     "        m, n = cfg.get(\"grid_size\")\n",
     "        \n",
-    "        # Update opt_model\n",
+    "        # Create graph with true costs and opt_model for estimated shortest path\n",
     "        true_graph = ShortestPathGrid(m, n, cost=cost)\n",
+    "        est_opt_model = shortestPathGrb(true_graph)\n",
     "\n",
     "        # Update the estimated costs\n",
     "        est_cost = pred_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
+    "        est_opt_model.setObj(est_cost)\n",
     "\n",
     "        # Solutions with information asymmetry\n",
-    "        asym_interdictor = AsymmetricSPNI(true_graph, budget=B, true_costs=cost, true_delays=interdiction, est_costs=est_cost, est_delays=interdiction, lsd=cfg.get(\"lsd\"))\n",
-    "        x_intd, obj_true = asym_interdictor.solve()\n",
+    "        asym_interdictor = AsymmetricSPNI(\n",
+    "            true_graph, \n",
+    "            budget=cfg.get(\"budget\"), \n",
+    "            true_costs=cost, \n",
+    "            true_delays=interdiction, \n",
+    "            est_costs=est_cost, \n",
+    "            est_delays=interdiction, \n",
+    "            lsd=cfg.get(\"lsd\")\n",
+    "        )\n",
+    "        x_intd, _ = asym_interdictor.solve()\n",
     "\n",
-    "        # True shortest path after interdiction\n",
-    "        true_shortest_path = shortestPathGrb(true_graph)\n",
-    "        true_shortest_path.setObj(cost + x_intd * interdiction)\n",
-    "        y_true, obj_true = true_shortest_path.solve()\n",
+    "        # # True shortest path after interdiction\n",
+    "        # opt_model.setObj(cost + x_intd * interdiction)\n",
+    "        # y_true, _ = opt_model.solve()\n",
     "\n",
     "        # Estimated shortest path after interdiction\n",
-    "        est_shortest_path = shortestPathGrb(true_graph)\n",
-    "        est_shortest_path.setObj(est_cost + x_intd * interdiction)\n",
-    "        y_est, obj_est = est_shortest_path.solve()\n",
+    "        opt_model.setObj(est_cost + x_intd * interdiction)\n",
+    "        y_est, _ = opt_model.solve()\n",
     "\n",
     "        # Store the results\n",
-    "        true_objs.append(true_graph(y_true, interdictions=x_intd * interdiction))\n",
+    "        # true_objs.append(true_graph(y_true, interdictions=x_intd * interdiction))\n",
     "        est_objs.append(true_graph(y_est, interdictions=x_intd * interdiction))\n",
     "\n",
+    "        # Print progress\n",
     "        step = max(1, sim_data_samples // 20)  # ~every 5% (safe for small N)\n",
     "        if (i % step == 0) or (i == sim_data_samples - 1):\n",
     "            if i == sim_data_samples - 1:\n",
@@ -466,10 +477,11 @@
     "                sys.stdout.write('\\n')\n",
     "\n",
     "    # Evaluate performance\n",
-    "    return {\n",
-    "        \"true_objective\": np.array(true_objs),\n",
-    "        \"estimated_objective\": np.array(est_objs),\n",
-    "    }"
+    "    # return {\n",
+    "    #     \"true_objective\": np.array(true_objs),\n",
+    "    #     \"estimated_objective\": np.array(est_objs),\n",
+    "    # }\n",
+    "    return np.array(est_objs)"
    ]
   },
   {
@@ -486,6 +498,40 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spo_pred_asym_intd = compare_asym_intd(cfg, spo_model, test_data, interdictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eps = 1e-5  # Define a small epsilon for numerical stability\n",
+    "print(f\"Instances where Sym is better than Asym: {sum([1 if sym - asym > eps else 0 for sym, asym in zip(all_pred_sym_intd['spo_objective'], spo_pred_asym_intd)]) / len(po_objs)}\")\n",
+    "# print(f\"Instances where SPO is better than PO: {sum([1 if po - spo > eps else 0 for po, spo in zip(all_pred_sym_intd['spo_objective'], spo_pred_asym_intd)]) / len(po_objs)}\")\n",
+    "# print(f\"Sanity check (equal performance):      {sum([1 if abs(po - spo) < eps else 0 for po, spo in zip(all_pred_sym_intd['spo_objective'], spo_pred_asym_intd)]) / len(po_objs)}\")\n",
+    "# Interesting result: The percentage of PO better than SPO is almost equal to SPO better than PO."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[1 if sym - asym > eps else 0 for sym, asym in zip(all_pred_sym_intd['po_objective'], po_pred_asym_intd)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,23 +560,24 @@
     "\n",
     "# Print the results in a table format\n",
     "rows = [\n",
-    "    [\"Oracle\", f\"{true_mean:.2f}\", f\"{all_pred_sym_intd['true_objective'].mean():.2f}\", f\"{po_pred_asym_intd['true_objective'].mean():.2f}\"],\n",
-    "    [\"PO\", f\"{po_mean:.2f} \",  f\"{all_pred_sym_intd['po_objective'].mean():.2f} ({np.nan:.2f}%)\", f\"{po_pred_asym_intd['estimated_objective'].mean():.2f} ({np.nan:.2f}%)\"],\n",
-    "    [\"SPO\", f\"{spo_mean:.2f} \", f\"{all_pred_sym_intd['spo_objective'].mean():.2f} ({np.nan:.2f}%)\", f\"{np.nan:.2f} ({np.nan:.2f}%)\"],\n",
+    "    [\"Oracle\", f\"{true_mean:.2f}\", f\"{all_pred_sym_intd['true_objective'].mean():.2f}\", f\"{np.nan:.2f}\"],\n",
+    "    [\"PO\", f\"{po_mean:.2f} \",  f\"{all_pred_sym_intd['po_objective'].mean():.2f} ({np.nan:.2f}%)\", f\"{po_pred_asym_intd.mean():.2f} ({np.nan:.2f}%)\"],\n",
+    "    [\"SPO\", f\"{spo_mean:.2f} \", f\"{all_pred_sym_intd['spo_objective'].mean():.2f} ({np.nan:.2f}%)\", f\"{spo_pred_asym_intd.mean():.2f} ({np.nan:.2f}%)\"],\n",
     "    [\"Improvement\", f\"{np.nan:.2f}%\", f\"{np.nan:.2f}%\", f\"{np.nan:.2f}%\"]\n",
     "]\n",
     "print(tabulate(rows, headers=[\"Predictor\", \"No Interdictor\", \"Sym. Interdictor\", \"Asym. Interdictor\"], tablefmt=\"github\"))\n",
     "\n",
     "# Boxplot of the true objectives for both interdiction methods\n",
     "fig, ax = plt.subplots(figsize=(6,4))\n",
-    "_ = ax.boxplot([all_pred_sym_intd[\"true_objective\"], po_pred_asym_intd[\"true_objective\"]],\n",
-    "           tick_labels=['Benders', 'SPNI'],\n",
-    "           showmeans=True, meanline=True)"
+    "_ = ax.boxplot([all_pred_sym_intd[\"true_objective\"], po_pred_asym_intd],\n",
+    "           tick_labels=['Symmetric', 'Asymmetric'],\n",
+    "           showmeans=True, meanline=True)\n",
+    "ax.set_ylabel(\"Interdicted Shortest Path Length\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "26",
    "metadata": {},
    "source": [
     "## Comparison with Single Instances"
@@ -539,14 +586,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 2\n",
+    "idx = 0\n",
     "\n",
     "# Create figure\n",
     "fig, ax = plt.subplots(1,3,figsize=(18,6))\n",
+    "print(\"Uninterdicted Shortest Paths\")\n",
+    "print(\"----------------------------\")\n",
     "\n",
     "# Store constants that will be reused\n",
     "normalization_constant = cfg.get(\"normalization_constant\")\n",
@@ -591,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,32 +664,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create figure\n",
     "fig, ax2 = plt.subplots(1,3,figsize=(18,6))\n",
+    "print(\"Symmetric Interdiction\")\n",
+    "print(\"----------------------\")\n",
     "\n",
     "# Solve & visualize the shortest paths for ...\n",
     "# ... the oracle (same results for sym/asym interdiction)\n",
     "true_opt_model.setObj(cost + x_sym * interdiction)\n",
     "path, obj = true_opt_model.solve()\n",
-    "true_opt_model.visualize(ax=ax2[0], colored_edges=path, title=\"Oracle\")\n",
+    "true_opt_model.visualize(ax=ax2[0], colored_edges=path, dashed_edges=x_sym, title=\"Oracle\")\n",
     "true_pred_sym_intd = true_graph(path, interdictions=x_sym * interdiction)\n",
     "print(f\"Oracle cost: {true_pred_sym_intd:.2f}\")\n",
     "\n",
     "# ... the PO model & sym interdiction\n",
     "po_opt_model.setObj(po_cost + x_sym * interdiction)\n",
     "path, obj = po_opt_model.solve()\n",
-    "po_opt_model.visualize(ax=ax2[1], colored_edges=path, title=\"PO\")\n",
+    "po_opt_model.visualize(ax=ax2[1], colored_edges=path, dashed_edges=x_sym, title=\"PO\")\n",
     "po_pred_sym_intd = true_graph(path, interdictions=x_sym * interdiction)\n",
     "print(f\"PO cost: {po_pred_sym_intd:.2f}\")\n",
     "\n",
     "# ... the SPO model & sym interdiction\n",
     "spo_opt_model.setObj(spo_cost + x_sym * interdiction)\n",
     "path, obj = spo_opt_model.solve()\n",
-    "spo_opt_model.visualize(ax=ax2[2], colored_edges=path, title=\"SPO\")\n",
+    "spo_opt_model.visualize(ax=ax2[2], colored_edges=path, dashed_edges=x_sym, title=\"SPO\")\n",
     "spo_pred_sym_intd = true_graph(path, interdictions=x_sym * interdiction)\n",
     "print(f\"SPO cost: {spo_pred_sym_intd:.2f}\")\n",
     "\n",
@@ -650,12 +701,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create figure\n",
     "fig, ax3 = plt.subplots(1,3,figsize=(18,6))\n",
+    "print(\"Asymmetric Interdiction\")\n",
+    "print(\"-----------------------\")\n",
     "\n",
     "# Solve & visualize the shortest paths for ...\n",
     "# ... the oracle & asym interdiction\n",
@@ -668,14 +721,14 @@
     "# ... the PO model & asym interdiction\n",
     "po_opt_model.setObj(po_cost + x_asym_po * interdiction)\n",
     "path, obj = po_opt_model.solve()\n",
-    "po_opt_model.visualize(ax=ax3[1], colored_edges=path, title=\"PO\")\n",
+    "po_opt_model.visualize(ax=ax3[1], colored_edges=path, dashed_edges=x_asym_po, title=\"PO\")\n",
     "po_pred_asym_intd = true_graph(path, interdictions=x_asym_po * interdiction)\n",
     "print(f\"PO cost: {po_pred_asym_intd:.2f}\")\n",
     "\n",
     "# ... the SPO model & asym interdiction\n",
     "spo_opt_model.setObj(spo_cost + x_asym_spo * interdiction)\n",
     "path, obj = spo_opt_model.solve()\n",
-    "spo_opt_model.visualize(ax=ax3[2], colored_edges=path, title=\"SPO\")\n",
+    "spo_opt_model.visualize(ax=ax3[2], colored_edges=path, dashed_edges=x_asym_spo, title=\"SPO\")\n",
     "spo_pred_asym_intd = true_graph(path, interdictions=x_asym_spo * interdiction)\n",
     "print(f\"SPO cost: {spo_pred_asym_intd:.2f}\")\n",
     "\n",
@@ -685,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,14 +785,6 @@
     "# Possibly iteresting takeaways:\n",
     "# - Can we show that it doesn't matter much if the evader uses PO or SPO if we deploy bender's (kinda obvious bc bender's is the safe variant tho)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
