--- a/src/Notebooks/Asym_SPNI_PO.ipynb
+++ b/src/Notebooks/Asym_SPNI_PO.ipynb
@@ -373,7 +373,7 @@
     "opt_model.setObj(po_model(torch.tensor(features[0], dtype=torch.float32)).detach().numpy())\n",
     "path, _ = opt_model.solve()\n",
     "opt_model.visualize(ax=ax[2], colored_edges=path)\n",
-    "fig.tight_layout()\n"
+    "fig.tight_layout()"
    ]
   },
   {
