--- a/src/Notebooks/Robust_SPO.ipynb
+++ b/src/Notebooks/Robust_SPO.ipynb
@@ -69,13 +69,13 @@
     "num_test_samples = 200\n",
     "data_loader_batch_size = 32\n",
     "po_epochs = 60\n",
-    "spo_epochs = 10\n",
-    "spo_po_epochs = 10\n",
+    "spo_epochs = 20\n",
+    "spo_po_epochs = 0\n",
     "po_lr = 2e-2\n",
     "spo_lr = 1e-3\n",
     "spo_po_lr = po_lr\n",
     "anchor = \"meanstd\"\n",
-    "lam = .2\n",
+    "lam = .05\n",
     "deg = 7\n",
     "noise_width = 0.05\n",
     "\n",
@@ -214,6 +214,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from copy import deepcopy\n",
+    "idx = 0\n",
+    "cost = testing_data[\"costs\"][idx]*normalization_constant\n",
+    "feature = testing_data[\"feats\"][idx]\n",
+    "opt_model_temp = deepcopy(opt_model)\n",
+    "\n",
+    "# Set the cost for the grid (Optionally specify the source and target nodes)\n",
+    "opt_model_temp.setObj(cost)\n",
+    "\n",
+    "# Solve shortest path problem\n",
+    "path, obj = opt_model_temp.solve()\n",
+    "\n",
+    "# Predict the shortest path with predict-then-optimize framework\n",
+    "predicted_costs = spo_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy()\n",
+    "spo_graph = ShortestPathGrid(m, n, cost=predicted_costs)\n",
+    "spo_shortest_path = shortestPathGrb(spo_graph)\n",
+    "spo_path, _ = spo_shortest_path.solve()\n",
+    "\n",
+    "# Visualize\n",
+    "fig, axx = plt.subplots(1, 2, figsize=(12,6))\n",
+    "opt_model_temp.visualize(colored_edges=path, title=\"True Shortest Path\", ax=axx[0])\n",
+    "spo_graph.visualize(colored_edges=spo_path, title=\"SPO Shortest Path\", ax=axx[1])\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# test_data = gen_data(cfg, seed=intd_seed)\n",
     "true_objs, po_objs, spo_objs = compare_po_spo(cfg, opt_model, po_model, spo_model, testing_data)"
    ]
@@ -221,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "source": [
     "# Debugging Bender's Decomposition!"
@@ -361,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,20 +440,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "source": [
     "# End of Debugging Bender's Decomposition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = 0"
    ]
   },
   {
@@ -431,7 +453,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_interdiction = simulate_interdictor(cfg, testing_data, interdictions, normalization_constant)"
+    "idx = 0"
    ]
   },
   {
@@ -441,7 +463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "po_interdiction = simulate_interdictor(cfg, testing_data, interdictions, normalization_constant, est_model=po_model)"
+    "true_interdiction = simulate_interdictor(cfg, testing_data, interdictions, normalization_constant)"
    ]
   },
   {
@@ -451,13 +473,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spo_interdiction = simulate_interdictor(cfg, testing_data, interdictions, normalization_constant, est_model=spo_model)"
+    "po_interdiction = simulate_interdictor(cfg, testing_data, interdictions, normalization_constant, est_model=po_model)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spo_interdiction = simulate_interdictor(cfg, testing_data, interdictions, normalization_constant, est_model=spo_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "source": [
     "Takeaway from above: If we post-process the trained cost predictor with SPO, we can achieve a better model and better interdiction (robust) performance!"
@@ -555,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "source": [
     "## Single Examples"
@@ -564,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,8 +621,8 @@
     "spo_cost = spo_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
     "\n",
     "# Update estimated opt_models\n",
-    "po_graph = ShortestPathGrid(m, n, cost=po_cost)\n",
-    "po_opt_model = shortestPathGrb(po_graph)\n",
+    "spo_graph = ShortestPathGrid(m, n, cost=po_cost)\n",
+    "po_opt_model = shortestPathGrb(spo_graph)\n",
     "\n",
     "spo_graph = ShortestPathGrid(m, n, cost=spo_cost)\n",
     "spo_opt_model = shortestPathGrb(spo_graph)\n",
@@ -613,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,14 +699,14 @@
     "# Estimated shortest paths after interdiction\n",
     "true_graph.visualize(ax=ax[0, 0], colored_edges = y_est_true, dashed_edges=x_true, title=\"True Intd - Estimated Path\")\n",
     "\n",
-    "po_graph.visualize(ax=ax[0, 1], colored_edges = y_est_po, dashed_edges=x_po, title=\"PO Intd - Estimated Path\")\n",
+    "spo_graph.visualize(ax=ax[0, 1], colored_edges = y_est_po, dashed_edges=x_po, title=\"PO Intd - Estimated Path\")\n",
     "\n",
     "spo_graph.visualize(ax=ax[0, 2], colored_edges = y_est_spo, dashed_edges=x_spo, title=\"SPO Intd - Estimated Path\")\n",
     "\n",
     "# True shortest paths after interdiction\n",
     "true_graph.visualize(ax=ax[1, 0], colored_edges = y_true_true, dashed_edges=x_true, title=\"True Intd - True Path\")\n",
     "\n",
-    "po_graph.visualize(ax=ax[1, 1], colored_edges = y_true_po, dashed_edges=x_po, title=\"PO Intd - True Path\")\n",
+    "spo_graph.visualize(ax=ax[1, 1], colored_edges = y_true_po, dashed_edges=x_po, title=\"PO Intd - True Path\")\n",
     "\n",
     "spo_graph.visualize(ax=ax[1, 2], colored_edges = y_true_spo, dashed_edges=x_spo, title=\"SPO Intd - True Path\")\n",
     "\n",
@@ -688,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": []
