Introduced changing hybrid weight lam during training. Made loss learning curves logarithmic (looks so much better now.) Outcome: Robust SPO learning has not been successful.

--- a/src/Notebooks/Robust_SPO.ipynb
+++ b/src/Notebooks/Robust_SPO.ipynb
@@ -69,14 +69,14 @@
     "validation_size = 0.25\n",
     "num_test_samples = 200\n",
     "data_loader_batch_size = 32\n",
-    "po_epochs = 100\n",
-    "spo_epochs = 20\n",
-    "spo_po_epochs = 30\n",
+    "po_epochs = 90\n",
+    "spo_epochs = 50\n",
+    "spo_po_epochs = 0\n",
     "po_lr = 2e-2\n",
     "spo_lr = 1e-3\n",
     "spo_po_lr = po_lr\n",
     "anchor = \"mse\"\n",
-    "lam = .05\n",
+    "lam = .15\n",
     "deg = 7\n",
     "noise_width = 0.05\n",
     "\n",
@@ -193,7 +193,7 @@
     "    opt_model,\n",
     "    training_data,\n",
     "    versatile=True,\n",
-    "    transfer_model=spo_po_model\n",
+    "    # transfer_model=spo_po_model\n",
     ")"
    ]
   },
@@ -648,7 +648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 5"
+    "idx = 30"
    ]
   },
   {
